# pocketbook2readwise

./: .gitignore  README.md  exporter.py  pyproject.toml
