[tool.poetry]
name = "pocketbook2readwise"
version = "0.1.0"
description = ""
authors = ["iterlace <iterlace.dev@sent.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.2"
aiohttp = "3.8.3"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.10.0"
isort = "^5.10.1"
autoflake = "^1.7.7"
flake8 = "^5.0.4"
types-parsimonious = "^0.10.0.1"
anytree = "^2.8.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
pydantic-factories = "^1.17.1"
fakeredis = "^2.5.0"


[tool.black]
target-version = ["py310", "py311"]
force-exclude = '''
/(
  \.git
  |\.mypy_cache
  |\.pytest_cache
  |__pycache__
  |__init__\.py
)/
'''
line_length = 88


[tool.isort]
profile = "black"
src_paths = ["isort", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
length_sort = true
line_length = 88
group_by_package = true
skip_glob = "*/__init__.py"

[flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "__init__.py", ".mypy_cache", ".pytest_cache"]
extend-ignore = ["E203", "E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
